--- a/services/trade_producer/pyproject.toml
+++ b/services/trade_producer/pyproject.toml
@@ -11,6 +11,7 @@ quixstreams = "^2.8.0"
 websocket-client = "^1.8.0"
 make = "^0.1.6.post2"
 loguru = "^0.7.2"
+pydantic-settings = "^2.3.4"
 
 
 [tool.poetry.group.dev.dependencies]
