Slow down the API requests by 1s to avoid hitting API rate limit

--- a/docker-compose/backfill_pipeline.yml
+++ b/docker-compose/backfill_pipeline.yml
@@ -1,6 +1,6 @@
 version: "4.27.0" # Specify the version of Docker to use
 
-name: feature_pipeline # Name of the Docker Compose project
+name: backfill_pipeline # Name of the Docker Compose project
 
 networks:
   redpanda_network:
@@ -10,41 +10,43 @@ networks:
 
 services:
   trade_producer:
-    container_name: trade_producer # Optionally specify a container name
+    container_name: backfill_trade_producer # Optionally specify a container name
     build:
       context: ../services/trade_producer # Specify the build context for the trade_producer service
     networks:
       - redpanda_network # Connect this service to the Redpanda network
     environment:
       KAFKA_BROKER_ADDRESS: redpanda-0:9092 # Set the environment variable for the Kafka broker address
-    env_file:
-      - ../services/trade_producer/.env
+      LIVE_OR_HISTORICAL: "historical"
+      LAST_N_DAYS: 7
     restart: always # Always restart the container if it stops
 
   trade_to_ohlc:
-    container_name: trade_to_ohlc # Optionally specify a container name
+    container_name: backfill_trade_to_ohlc # Optionally specify a container name
     build:
       context: ../services/trade_to_ohlc # Specify the build context for the trade_to_ohlc service
     networks:
       - redpanda_network # Connect this service to the Redpanda network
     environment:
       KAFKA_BROKER_ADDRESS: redpanda-0:9092 # Set the environment variable for the Kafka broker address
-      LIVE_OR_HISTORICAL: "live"
     env_file:
       - ../services/trade_to_ohlc/.env
       #- ../services/trade_to_ohlc/setup_live_config.sh # Load environment variables from this file
     restart: always # Always restart the container if it stops
 
-  # kafka_to_feature_store:
-  #     container_name: kafka_to_feature_store # Specify a container name for this service
-  #     build:
-  #       context: ../services/kafka_to_feature_store # Specify the build context for the kafka_to_feature_store service
-  #     networks:
-  #       - redpanda_network # Connect this service to the Redpanda network
-  #     environment:
-  #       KAFKA_BROKER_ADDRESS: redpanda-0:9092 # Set the environment variable for the Kafka broker address
-  #     env_file:
-  #       - ../services/kafka_to_feature_store/.env
-  #       #- ../services/kafka_to_feature_store/setup_live_config.sh # Load environment variables from this file
-  #       #- ../services/kafka_to_feature_store/setup_credentials.sh # Load additional environment variables from this file
-  #     restart: always # Always restart the container if it stops
+  kafka_to_feature_store:
+    container_name: backfill_kafka_to_feature_store # Specify a container name for this service
+    build:
+      context: ../services/kafka_to_feature_store # Specify the build context for the kafka_to_feature_store service
+    networks:
+      - redpanda_network # Connect this service to the Redpanda network
+    environment:
+      KAFKA_BROKER_ADDRESS: redpanda-0:9092 # Set the environment variable for the Kafka broker address
+      LIVE_OR_HISTORICAL: "historical"
+      #BUFFER_SIZE: 1000
+
+    env_file:
+      - ../services/kafka_to_feature_store/.env
+      #- ../services/kafka_to_feature_store/setup_live_config.sh # Load environment variables from this file
+      #- ../services/kafka_to_feature_store/setup_credentials.sh # Load additional environment variables from this file
+    restart: always # Always restart the container if it stops
