--- a/services/kafka_to_feature_store/pyproject.toml
+++ b/services/kafka_to_feature_store/pyproject.toml
@@ -12,6 +12,9 @@ loguru = "^0.7.2"
 hopsworks = "^3.7.0"
 
 
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.5.5"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
