--- a/services/trade_producer/Makefile
+++ b/services/trade_producer/Makefile
@@ -1,5 +1,9 @@
 run-dev:
 	poetry run python src/main.py
+run-dev-historical:
+	LIVE_OR_HISTORICAL=historical \
+	LAST_N_DAYS=7 \
+	poetry run python src/main.py
 build:
 	docker build -t trade-producer .
 
