Added an option to create new consumer group in kafka to feature store service

--- a/services/kafka_to_feature_store/Makefile
+++ b/services/kafka_to_feature_store/Makefile
@@ -24,6 +24,9 @@ run: build
 		--env KAFKA_CONSUMER_GROUP=kafka_to_feature_store \
 		--env FEATURE_GROUP_NAME=ohlc_feature_group_1 \
 		--env FEATURE_GROUP_VERSION=1 \
+		--env CREATE_NEW_CONSUMER_GROUP=true \
+		--env HOPSWORKS_PROJECT_NAME=${HOPSWORKS_PROJECT_NAME} \
+		--env HOPSWORKS_API_KEY=${HOPSWORKS_API_KEY} \
 		kafka-to-feature-store
 lint:
 	poetry run ruff check --fix
