--- a/services/price_predictor/pyproject.toml
+++ b/services/price_predictor/pyproject.toml
@@ -13,6 +13,9 @@ xgboost = "^2.1.1"
 loguru = "^0.7.2"
 tools = {path = "../../tools"}
 lightgbm = "^4.5.0"
+pandas = "^2.2.2"
+matplotlib = "^3.9.1.post1"
+
 
 
 
