We added the predictor class to the price_predictor service

--- a/services/price_predictor/Makefile
+++ b/services/price_predictor/Makefile
@@ -4,7 +4,7 @@ train:
 
 predict:
 	source ../../setup_credentials.sh && \
-	poetry run python src/predictor.py
+	python src/predictor.py
 
 api:
 	source ../../setup_credentials.sh && \
