--- a/services/price_predictor/pyproject.toml
+++ b/services/price_predictor/pyproject.toml
@@ -6,17 +6,18 @@ authors = ["Ramane23 <contactsouley@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.9"
 comet-ml = "^3.44.4"
 scikit-learn = "^1.5.1"
 xgboost = "^2.1.1"
 loguru = "^0.7.2"
-tools = {path = "../../tools"}
 lightgbm = "^4.5.0"
 pandas = "^2.2.2"
 matplotlib = "^3.9.1.post1"
 pydantic = "^2.8.2"
 flask = "^3.0.3"
+gunicorn = "^23.0.0"
+ta-lib="^0.4.28"
 
 
 
