--- a/services/trade_producer/app.yaml
+++ b/services/trade_producer/app.yaml
@@ -1,6 +1,6 @@
 name: trade_producer
 language: python
 variables: []
-dockerfile: dockerfile
+dockerfile: Dockerfile
 runEntryPoint: src/main.py
 defaultFile: src/main.py
