--- a/services/trade_producer/app.yaml
+++ b/services/trade_producer/app.yaml
@@ -1,6 +1,11 @@
 name: trade_producer
 language: python
-variables: []
+variables:
+  - name: KAFKA_TOPIC_NAME
+    inputType: InputTopic
+    description: This is the kafka topic where the fetchedd trades (from the websocket API) will be stored / produced
+    defaultValue: trades_live
+    required: true
 dockerfile: Dockerfile
 runEntryPoint: src/main.py
 defaultFile: src/main.py
