--- a/services/trade_producer/app.yaml
+++ b/services/trade_producer/app.yaml
@@ -6,6 +6,11 @@ variables:
     description: This is the kafka topic where the fetchedd trades (from the websocket API) will be stored / produced
     defaultValue: trades_live
     required: true
+  - name: PRODUCT_IDS
+    inputType: FreeText
+    description: This is the list of cryptos we want to fetch data for
+    defaultValue: "'[\"BTC/USD\"]'"
+    required: true
 dockerfile: Dockerfile
 runEntryPoint: src/main.py
 defaultFile: src/main.py
