--- a/services/trade_producer/app.yaml
+++ b/services/trade_producer/app.yaml
@@ -11,6 +11,11 @@ variables:
     description: This is the list of cryptos we want to fetch data for
     defaultValue: "'[\"BTC/USD\"]'"
     required: true
+  - name: LIVE_OR_HISTORICAL
+    inputType: FreeText
+    description: This is to indicate that we want to fetch live / real-time trades data
+    defaultValue: live
+    required: true
 dockerfile: Dockerfile
 runEntryPoint: src/main.py
 defaultFile: src/main.py
