--- a/services/trade_to_ohlc/app.yaml
+++ b/services/trade_to_ohlc/app.yaml
@@ -1,6 +1,11 @@
 name: trade_to_ohlc
 language: python
-variables: []
+variables:
+  - name: KAFKA_INPUT_TOPIC
+    inputType: InputTopic
+    description: This is the kafka topic from which we will read trades
+    defaultValue: trades_live
+    required: true
 dockerfile: Dockerfile
 runEntryPoint: src/main.py
 defaultFile: src/main.py
