--- a/services/kafka_to_feature_store/app.yaml
+++ b/services/kafka_to_feature_store/app.yaml
@@ -1,6 +1,11 @@
 name: kafka_to_feature_store
 language: python
-variables: []
+variables:
+  - name: KAFKA_TOPIC
+    inputType: InputTopic
+    description: kafka topic from which we will read the ohlc candles
+    defaultValue: ohlc_live
+    required: true
 dockerfile: Dockerfile
 runEntryPoint: src/main.py
 defaultFile: src/main.py
