--- a/services/kafka_to_feature_store/app.yaml
+++ b/services/kafka_to_feature_store/app.yaml
@@ -16,6 +16,11 @@ variables:
     description: This is the name of the feature group from the hopsworks feature store
     defaultValue: ohlc_feature_group
     required: true
+  - name: FEATURE_GROUP_VERSION
+    inputType: FreeText
+    description: This is the version of the hopsworks feature group we are using
+    defaultValue: 1
+    required: true
 dockerfile: Dockerfile
 runEntryPoint: src/main.py
 defaultFile: src/main.py
