--- a/quix.yaml
+++ b/quix.yaml
@@ -59,6 +59,35 @@ deployments:
         description: length of the ohlc candles
         required: true
         value: 60
+  - name: kafka_to_feature_store
+    application: services/kafka_to_feature_store
+    version: latest
+    deploymentType: Service
+    resources:
+      cpu: 200
+      memory: 500
+      replicas: 1
+    variables:
+      - name: KAFKA_TOPIC
+        inputType: InputTopic
+        description: kafka topic from which we will read the ohlc candles
+        required: true
+        value: ohlc_live
+      - name: KAFKA_CONSUMER_GROUP
+        inputType: FreeText
+        description: the consumer group to read the ohlc candles from the ohlc kafka topic
+        required: true
+        value: ohlc_live_consumer_group
+      - name: FEATURE_GROUP_NAME
+        inputType: FreeText
+        description: This is the name of the feature group from the hopsworks feature store
+        required: true
+        value: ohlc_feature_group
+      - name: FEATURE_GROUP_VERSION
+        inputType: FreeText
+        description: This is the version of the hopsworks feature group we are using
+        required: true
+        value: 1
 
 # This section describes the Topics of the data pipeline
 topics:
