--- a/services/kafka_to_feature_store/app.yaml
+++ b/services/kafka_to_feature_store/app.yaml
@@ -26,6 +26,11 @@ variables:
     description: This is the number of ohlc candles we will push to the feature store at once
     defaultValue: 1
     required: true
+  - name: LIVE_OR_HISTORICAL
+    inputType: FreeText
+    description: we are running on live mode
+    defaultValue: live
+    required: true
 dockerfile: Dockerfile
 runEntryPoint: src/main.py
 defaultFile: src/main.py
