--- a/quix.yaml
+++ b/quix.yaml
@@ -17,7 +17,7 @@ deployments:
     variables:
       - name: KAFKA_TOPIC_NAME
         inputType: InputTopic
-        description: This is the kafka topic where the fetchedd trades (from the websocket API) will be stored / produced
+        description: This is the kafka topic where the fetched trades (from the websocket API) will be stored / produced
         required: true
         value: trades_live
       - name: PRODUCT_IDS
