--- a/services/price_predictor/app.yaml
+++ b/services/price_predictor/app.yaml
@@ -1,6 +1,11 @@
 name: price_predictor
 language: python
-variables: []
+variables:
+  - name: COMET_ML_API_KEY
+    inputType: Secret
+    description: ''
+    defaultValue: COMET_ML_API_KEY
+    required: true
 dockerfile: Dockerfile
 runEntryPoint: src/main.py
 defaultFile: src/main.py
