--- a/services/price_predictor/app.yaml
+++ b/services/price_predictor/app.yaml
@@ -11,6 +11,11 @@ variables:
     description: ''
     defaultValue: COMET_ML_PROJECT_NAME
     required: true
+  - name: COMET_ML_WORKSPACE
+    inputType: Secret
+    description: ''
+    defaultValue: COMET_ML_WORKSPACE
+    required: true
 dockerfile: Dockerfile
 runEntryPoint: src/main.py
 defaultFile: src/main.py
