--- a/quix.yaml
+++ b/quix.yaml
@@ -108,6 +108,30 @@ deployments:
         description: ''
         required: true
         secretKey: HOPSWORKS_PROJECT_NAME
+  - name: price_predictor
+    application: services/price_predictor
+    version: latest
+    deploymentType: Service
+    resources:
+      cpu: 200
+      memory: 500
+      replicas: 1
+    variables:
+      - name: COMET_ML_API_KEY
+        inputType: Secret
+        description: ''
+        required: true
+        secretKey: COMET_ML_API_KEY
+      - name: COMET_ML_PROJECT_NAME
+        inputType: Secret
+        description: ''
+        required: true
+        secretKey: COMET_ML_PROJECT_NAME
+      - name: COMET_ML_WORKSPACE
+        inputType: Secret
+        description: ''
+        required: true
+        secretKey: COMET_ML_WORKSPACE
 
 # This section describes the Topics of the data pipeline
 topics:
